# cast-rust-api

./: .env  .env.example  Cargo.toml  Makefile.toml  README.md  comando.txt  config.rs  docker-compose.yml  route.txt  usar
.github/workflows/: pull-requests.yml
.husky/:  pre-commit
apps/admin_api/: Cargo.toml
apps/admin_api/src/: main.rs  routes.rs
apps/admin_api/src/modules/: mod.rs
apps/admin_api/src/modules/serie/controllers/: create_serie_controller.rs  mod.rs
apps/admin_api/src/modules/serie/dto/: create_serie_input_dto.rs  create_serie_output_dto.rs  mod.rs
apps/admin_api/src/modules/serie/services/: create_serie_service.rs  mod.rs
apps/admin_api/src/modules/test/controllers/: test_controller.rs
apps/admin_api/src/modules/video/controllers/: create_video_controller.rs  delete_video_controller.rs  find_many_video_controller.rs  mod.rs  update_video_controller.rs  upload_video_controller.rs
apps/admin_api/src/modules/video/dto/: create_video_input_dto.rs  mod.rs
apps/admin_api/src/modules/video/dto/io/: create_video_input_dto.rs  create_video_output_dto.rs  delete_video_input_dto.rs  find_many_video_input_dto.rs  find_many_video_output_dto.rs  mod.rs  update_video_input_dto.rs  update_video_output_dto.rs
apps/admin_api/src/modules/video/dto/query_params/: find_many_video_query_params_dto.rs  mod.rs
apps/admin_api/src/modules/video/dto/request/: create_video_request_dto.rs  mod.rs  update_video_request_dto.rs
apps/admin_api/src/modules/video/dto/route_params/: delete_video_route_params_dto.rs  mod.rs  update_video_route_params_dto.rs  upload_video_route_params_dto.rs
apps/admin_api/src/modules/video/services/: create_video_service.rs  delete_video_service.rs  find_many_video_service.rs  mod.rs  update_video_service.rs  upload_video_service.rs
apps/auth_api/: Cargo.toml
apps/auth_api/src/: main.rs  routes.rs
apps/auth_api/src/controllers/: mod.rs  user_controller.rs
apps/auth_api/src/dto/: mod.rs  user_dto.rs
apps/auth_api/src/modules/auth/controllers/: login_controller.rs  mod.rs  refresh_token_controller.rs  register_controller.rs  user_controller.rs
apps/auth_api/src/modules/auth/dto/: login_input_dto.rs  login_output_dto.rs  mod.rs  refresh_token_input_dto.rs  refresh_token_output_dto.rs  register_input_dto.rs  register_output_dto.rs
apps/auth_api/src/modules/auth/services/: login_service.rs  mod.rs  refresh_token_service.rs  register_service.rs  user_service.rs
apps/auth_api/src/services/: mod.rs  user_service.rs
apps/viewer_api/: Cargo.toml
apps/viewer_api/src/: main.rs
docker/redis/: Dockerfile
docker/sqlserver/: configure-db.sh  setup.sql
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250828_140352_create_streaming_schema.rs  m20250828_313242_create_index_and_dadas.rs
scripts/: generate_migration.sh  run_migrations_internal.sh  run_migrations_on_docker.sh
shared/: Cargo.toml
shared/src/enums/: access_group_enum.rs  mod.rs
shared/src/modules/: app_state.rs  config.rs  mod.rs  response_interface.rs
shared/src/modules/auth/: access_control.rs  auth.rs  jwt.rs  jwt_extractor.rs  mod.rs
shared/src/modules/azure_storage/: mod.rs  model_storage_service.rs
shared/src/modules/azure_storage/services/: mod.rs  video_storage_service.rs
shared/src/modules/cache/: redis_cache.rs
shared/src/modules/database/: connection.rs  mod.rs  schema.rs
shared/src/modules/database/repositories/: mod.rs  serie_repository.rs  users.rs  users_repository.rs  videos_repository.rs
shared/src/modules/database/repositories/dto/: find_many_video_output_dto.rs  mod.rs
shared/src/modules/database/schema/: access_groups.rs  actors.rs  categories.rs  directors.rs  favorites.rs  mod.rs  prelude.rs  ratings.rs  series.rs  users.rs  users_access_groups.rs  video_actors.rs  video_categories.rs  video_directors.rs  videos.rs  watch_history.rs
shared/src/modules/interceptors/: mod.rs  transform_middleware.rs
shared/src/modules/validation/: mod.rs  validate_release_year.rs  validation_layer.rs
