[workspace]
members = [
    "apps/auth_api",
    "apps/admin_api",
    "apps/viewer_api",
    "shared"
]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
shared = { path = "./shared" }
tracing-subscriber = "0.3"
tracing = "0.1"
dotenvy = "0.15.7"
socket2 = "0.4"