[workspace]
members = [
    "apps/auth_api",
    "apps/admin_api",
    "apps/viewer_api",
    "shared"
]

resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
shared = { path = "./shared" }
tracing-subscriber = "0.3"
tracing = "0.1"
dotenvy = "0.15.7"
socket2 = "0.4"

sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls"] }
sea-query = "0.30"
sea-query-binder = "0.5"
sea-orm-cli = "0.12"

sqlx = { version = "0.6.3", features = ["mssql", "runtime-tokio-rustls", "macros"] }


bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

cargo-husky = { version = "1.5.0", features = ["precommit-hook","run-cargo-fmt","run-cargo-clippy"] }