[workspace]
members = [
    "apps/auth_api",
    "apps/admin_api",
    "apps/viewer_api",
    "shared",
    "migration",
    "macros",
]

resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
shared = { path = "./shared" }
macros = { path = "./macros" }
tracing-subscriber = "0.3"
tracing = "0.1"
dotenvy = "0.15.7"
socket2 = "0.4"
anyhow = "1.0.75"
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
sea-query = "0.30"
sea-query-binder = "0.5"
sea-orm-cli = "0.12"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "macros"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
axum-extra = "0.6"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.18", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
tower = "0.4"
futures = "0.3"
http-body = "1.0.1"
async-trait = "0.1"
actix-web = "4"
azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
azure_core = "0.21.0"
url = "2.4.1"
slug = "0.1"
time = { version = "0.3", features = ["macros"] }