[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-cli = { workspace = true }
tokio = { workspace = true }
shared = { workspace = true }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.5"
features = ["runtime-tokio-rustls", "sqlx-postgres"] 
cargo-husky = { workspace = true }
