[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
sea-orm-cli = { workspace = true }
sqlx = { workspace = true }
bcrypt ={ workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
axum-extra = { workspace = true }
cargo-husky = { workspace = true }
validator = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
async-trait = { workspace = true }
hyper = { workspace = true }
azure_storage_blobs = { workspace = true }
azure_storage = { workspace = true }
azure_core = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
slug = { workspace = true }
time = { workspace = true }
