[package]
name = "admin_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared = { workspace = true }
dotenvy = { workspace = true }
socket2 = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
sea-orm-cli = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }